# CoLIBRi

./: .env.sample  .gitattributes  .gitignore  LICENSE  README.md  THIRD-PARTY-LIBRARY-LICENSES.txt  docker-compose.yml
conv-search/: .env  .env.sample  .gitlab-ci.yml  Dockerfile  Dockerfile.base  README.md  entrypoint.sh  env_conv_search.yml  fixed_ollama_base.py  pyproject.toml
conv-search/src/app/: backend.py  chatbot_logic.py  search_engine.py  utils.py
conv-search/src/flask/: add_llm_embeddings.py  backend.py  chatbot_logic.py  search_engine.py  utils.py
database/: Dockerfile  README.md  build.gradle
database/config/checkstyle/: checkstyle.xml  suppressions.xml
database/config/docs/: openapi.json
database/config/pmd/: pmd.xml
database/config/spotbugs/: excludeFilter.xml
database/initdb/: 1_user_schema.sql
database/resources/: postgres.drawio
database/resources/example_data/: drawings.csv  format_searchdata.ipynb  runtimes.csv  searchdata.csv
database/src/main/java/de/scadsai/colibri/database/: DatabaseApplication.java
database/src/main/java/de/scadsai/colibri/database/config/: CORSConfiguration.java  package-info.java
database/src/main/java/de/scadsai/colibri/database/controller/: DrawingController.java  DrawingNotFoundAdvice.java  FeedbackController.java  FeedbackNotFoundAdvice.java  FeedbacksNotFoundForHistoryAdvice.java  HistoryController.java  HistoryNotFoundAdvice.java  RuntimeController.java  RuntimeNotFoundAdvice.java  RuntimesNotFoundForDrawingAdvice.java  SearchDataController.java  SearchDataNotFoundAdvice.java  SearchDataNotFoundForDrawingAdvice.java  package-info.java
database/src/main/java/de/scadsai/colibri/database/dto/: DrawingDto.java  FeedbackDto.java  HistoryDto.java  RuntimeDto.java  SearchDataDto.java  package-info.java
database/src/main/java/de/scadsai/colibri/database/entity/: Drawing.java  Feedback.java  History.java  Runtime.java  SearchData.java  package-info.java
database/src/main/java/de/scadsai/colibri/database/exception/: DrawingNotFoundException.java  FeedbackNotFoundException.java  FeedbacksNotFoundForHistoryException.java  HistoryNotFoundException.java  RuntimeNotFoundException.java  RuntimesNotFoundForDrawingException.java  SearchDataNotFoundException.java  SearchDataNotFoundForDrawingException.java
database/src/main/java/de/scadsai/colibri/database/repository/: DrawingRepository.java  FeedbackRepository.java  HistoryRepository.java  RuntimeRepository.java  SearchDataRepository.java  package-info.java
database/src/main/java/de/scadsai/colibri/database/service/: DrawingService.java  DrawingServiceImpl.java  DtoService.java  DtoServiceImpl.java  FeedbackService.java  FeedbackServiceImpl.java  HistoryService.java  HistoryServiceImpl.java  RuntimeService.java  RuntimeServiceImpl.java  SearchDataService.java  SearchDataServiceImpl.java  package-info.java
database/src/main/java/de/scadsai/infoextract/database/: DatabaseApplication.java
database/src/main/java/de/scadsai/infoextract/database/config/: CORSConfiguration.java  package-info.java
database/src/main/resources/: application.properties
database/src/test/java/de/scadsai/colibri/database/: DatabaseApplicationTests.java
database/src/test/java/de/scadsai/infoextract/database/: DatabaseApplicationTests.java
database/src/test/resources/: application.properties
example_data/: README.md
frontend/: Dockerfile  README.md  entrypoint.sh  frontend-conda-env.yml  pyproject.toml
frontend/src/app/: app.py  main.py  search_engine.py  technical_drawing.py  utils.py
frontend/src/app/assets/: analyze.css
frontend/src/app/pages/: analyze.py
preprocessor/: Dockerfile  Dockerfile.cu118  Dockerfile.cu126  Dockerfile.cu129  README.md  entrypoint.sh  preprocessor-conda-env.yml  pyproject.toml  requirements.txt
preprocessor/src/flask/: backend.py  preprocess.py
preprocessor/src/flask/converter/: consts.py  image_rotation.py  image_std.py  shape_extract.py  table_extract.py  thumb_gen.py  utils.py
preprocessor/src/flask/converter/resources/nnUNet_results/Dataset001_ViewSegmentation/: inference_information.json  inference_instructions.txt
preprocessor/src/flask/converter/resources/nnUNet_results/Dataset001_ViewSegmentation/nnUNetTrainer__nnUNetPlans__2d/: dataset.json  dataset_fingerprint.json  plans.json
preprocessor/src/flask/ocr/: context_merger.py  extraction.py  paddle_ocr_engine.py  utils.py  vectorizer.py
preprocessor/src/flask/ocr/resources/json/: materials.json  materials_edited.json  norms.json
preprocessor/src/flask/ocr/resources/paddleocr_files/: cpt_dict_appended.txt
preprocessor/src/flask/ocr/resources/paddleocr_files/PP-OCRv5_server_det/: inference.json  inference.yml
preprocessor/src/flask/ocr/resources/paddleocr_files/PP-OCRv5_server_rec/: inference.json  inference.yml
preprocessor/src/flask/shapes/: vectorizer.py
tools/: README.md  benchmark_vlm.ipynb  evaluate_vlm_results.ipynb  generate_database_examples.py  get_llm_examples.py
tools/benchmarks/: RAG-prompt-benchmark.ipynb  benchmark_preprocessor.ipynb  benchmark_vlm.ipynb  eval_unet.ipynb  evaluate_preprocessor_result.ipynb  evaluate_vlm_results.ipynb  get_ocr_vis_for_pdf.ipynb
tools/benchmarks/resources/: complex_prompts.txt  prompts.txt
tools/data_generator/: gen_3d_views.py  gen_complete_technical_drawings.py  gen_fake_rec_data.py  gen_table_rec_data.py  gen_technical_drawing_polygons.py  helpers.py
tools/resources/: materials.json
(+113 files in other folders)
